--- a/ProyectoBses/src/espol/edu/ec/gui/fxml/InicioSesion.fxml
+++ b/ProyectoBses/src/espol/edu/ec/gui/fxml/InicioSesion.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.Light.Distant?>
 <?import javafx.scene.effect.Lighting?>
@@ -13,7 +14,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="espol.edu.ec.gui.controller.InicioSesionController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="espol.edu.ec.gui.controller.InicioSesionController">
    <children>
       <ImageView fitHeight="400.0" fitWidth="600.0">
          <image>
@@ -35,16 +36,13 @@
             <URL value="@resources/bootstrap2.css" />
             <URL value="@resources/bootstrap3.css" />
          </stylesheets></TextField>
-      <TextField fx:id="txtContra" layoutX="294.0" layoutY="227.0" prefHeight="30.0" prefWidth="151.0" />
       <ChoiceBox fx:id="choEmpl" layoutX="294.0" layoutY="287.0" prefHeight="30.0" prefWidth="151.0">
          <effect>
             <Lighting>
                <bumpInput>
                   <Shadow />
                </bumpInput>
-               <light>
-                  <Light.Distant />
-               </light>
+             
             </Lighting>
          </effect>
       </ChoiceBox>
@@ -59,5 +57,6 @@
             <Image url="@../../../../../resources/GYM.jpg" />
          </image>
       </ImageView>
+      <PasswordField fx:id="txtContra" layoutX="295.0" layoutY="227.0" />
    </children>
 </AnchorPane>
