--- a/ProyectoBses/src/espol/edu/ec/gui/fxml/VentanaRecepcionista.fxml
+++ b/ProyectoBses/src/espol/edu/ec/gui/fxml/VentanaRecepcionista.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.ComboBox?>
@@ -10,13 +11,10 @@
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.effect.Light.Distant?>
-<?import javafx.scene.effect.Lighting?>
-<?import javafx.scene.effect.Shadow?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="543.0" prefWidth="787.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="espol.edu.ec.gui.controller.VentanaRecepcionistaController">
+<AnchorPane id="AnchorPane" prefHeight="543.0" prefWidth="787.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="espol.edu.ec.gui.controller.VentanaRecepcionistaController">
    <children>
       <TabPane layoutY="52.0" prefHeight="491.0" prefWidth="787.0" tabClosingPolicy="UNAVAILABLE">
         <tabs>
@@ -68,21 +66,14 @@
                         <TextField fx:id="txtTelefono" layoutX="189.0" layoutY="273.0" prefHeight="25.0" prefWidth="523.0" />
                         <TextField fx:id="txtApellidos" layoutX="189.0" layoutY="132.0" prefHeight="25.0" prefWidth="523.0" />
                         <TextField fx:id="txtNombre" layoutX="189.0" layoutY="85.0" prefHeight="25.0" prefWidth="523.0" />
-                        <DatePicker fx:id="date" layoutX="187.0" layoutY="179.0" prefHeight="25.0" prefWidth="527.0" />
+                        <DatePicker fx:id="date" layoutX="187.0" layoutY="179.0" prefHeight="25.0" prefWidth="527.0">
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor></DatePicker>
                         <TextField fx:id="txtCorreo" layoutX="189.0" layoutY="367.0" prefHeight="25.0" prefWidth="523.0" />
                         <TextField fx:id="txtDireccion" layoutX="189.0" layoutY="320.0" prefHeight="25.0" prefWidth="523.0" />
                         <ComboBox fx:id="comboSexo" layoutX="189.0" layoutY="231.0" prefWidth="150.0" />
                         <Button fx:id="btnIngreso" layoutX="399.0" layoutY="410.0" mnemonicParsing="false" onAction="#nuevoCliente" text="Ingresar">
-                           <effect>
-                              <Lighting>
-                                 <bumpInput>
-                                    <Shadow />
-                                 </bumpInput>
-                                 <light>
-                                    <Light.Distant />
-                                 </light>
-                              </Lighting>
-                           </effect>
                            <font>
                               <Font name="System Bold" size="17.0" />
                            </font></Button>
@@ -116,17 +107,7 @@
                         <Button fx:id="btnBuscar" layoutX="360.0" layoutY="48.0" mnemonicParsing="false" onAction="#buscar" prefHeight="25.0" prefWidth="98.0" text="Buscar">
                            <font>
                               <Font size="15.0" />
-                           </font>
-                           <effect>
-                              <Lighting>
-                                 <bumpInput>
-                                    <Shadow />
-                                 </bumpInput>
-                                 <light>
-                                    <Light.Distant />
-                                 </light>
-                              </Lighting>
-                           </effect></Button>
+                           </font></Button>
                      </children>
                   </AnchorPane>
               </content>
@@ -137,23 +118,13 @@
                      <children>
                         <TextField fx:id="txtPrecio" layoutX="164.0" layoutY="256.0" prefHeight="25.0" prefWidth="399.0" />
                         <Button fx:id="nuevaMembresia" layoutX="334.0" layoutY="423.0" mnemonicParsing="false" onAction="#ingresoMembresia" text="Ingresar" />
-                        <TextField fx:id="txtBusquedaMembresia" layoutX="201.0" layoutY="54.0" />
+                        <TextField fx:id="txtBusquedaMembresia" layoutX="201.0" layoutY="54.0" promptText="Buscar por cédula" />
                         <Label alignment="CENTER" layoutX="14.0" layoutY="14.0" prefHeight="26.0" prefWidth="116.0" text="BUSQUEDA" />
                         <ChoiceBox fx:id="comboBusquedaMembresia" layoutX="14.0" layoutY="54.0" prefWidth="150.0" />
                         <Button fx:id="btnBuscar1" layoutX="393.0" layoutY="51.0" mnemonicParsing="false" onAction="#buscarMembresia" prefHeight="25.0" prefWidth="98.0" text="Buscar">
                            <font>
                               <Font size="15.0" />
                            </font>
-                           <effect>
-                              <Lighting>
-                                 <bumpInput>
-                                    <Shadow />
-                                 </bumpInput>
-                                 <light>
-                                    <Light.Distant />
-                                 </light>
-                              </Lighting>
-                           </effect>
                         </Button>
                         <TableView fx:id="tableNuevaMembresia" layoutX="-1.0" layoutY="92.0" onKeyPressed="#seleccionObjeto" prefHeight="200.0" prefWidth="787.0">
                           <columns>
