--- a/ProyectoBses/src/espol/edu/ec/gui/fxml/Empleados.fxml
+++ b/ProyectoBses/src/espol/edu/ec/gui/fxml/Empleados.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 
-<AnchorPane id="AnchorPane" prefHeight="572.0" prefWidth="1081.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="espol.edu.ec.gui.controller.EmpleadosController">
+<AnchorPane id="AnchorPane" prefHeight="572.0" prefWidth="1081.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="espol.edu.ec.gui.controller.EmpleadosController">
    <children>
       <SplitPane dividerPositions="0.17222222222222222" prefHeight="572.0" prefWidth="1082.0">
         <items>
@@ -40,8 +40,8 @@
                         <Label layoutX="38.0" layoutY="415.0" prefHeight="26.0" prefWidth="144.0" text="Celular:" />
                         <TextField fx:id="txtModifcarTelefono" layoutX="182.0" layoutY="416.0" prefHeight="25.0" prefWidth="225.0" />
                         <ChoiceBox fx:id="choSexoModificarEmpleado" layoutX="182.0" layoutY="366.0" prefHeight="25.0" prefWidth="225.0" />
-                        <Button fx:id="btnModificarEmpleado" layoutX="409.0" layoutY="490.0" mnemonicParsing="false" onAction="#modificarEmpleado" text="Modificar" />
-                        <Button fx:id="btnBuscarModificar" layoutX="382.0" layoutY="50.0" mnemonicParsing="false" onAction="#buscarModificarEmpleado" prefHeight="25.0" prefWidth="72.0" text="Buscar" />
+                        <Button fx:id="btnModificarEmpleado" layoutX="378.0" layoutY="503.0" mnemonicParsing="false" onAction="#modificarEmpleado" text="Modificar" />
+                        <Button fx:id="btnBuscarModificar" layoutX="223.0" layoutY="50.0" mnemonicParsing="false" onAction="#buscarModificarEmpleado" prefHeight="25.0" prefWidth="72.0" text="Buscar" />
                         <TableView fx:id="tableModificar" layoutY="97.0" prefHeight="175.0" prefWidth="885.0">
                            <columns>
                               <TableColumn prefWidth="206.0" text="CEDULA" />
@@ -52,9 +52,7 @@
                               <TableColumn prefWidth="153.0" text="CORREO" />
                            </columns>
                         </TableView>
-                        <TextField fx:id="txtModificarBuscar" layoutX="193.0" layoutY="50.0" />
-                        <Label alignment="CENTER" layoutX="14.0" layoutY="14.0" prefHeight="26.0" prefWidth="116.0" text="BUSQUEDA" />
-                        <ChoiceBox fx:id="choBusquedaModificar" layoutX="14.0" layoutY="50.0" prefWidth="150.0" />
+                        <TextField fx:id="txtModificarBuscar" layoutX="51.0" layoutY="50.0" promptText="Buscar Cédula" />
                         <Pane fx:id="paneAsignarEmpleo" layoutX="411.0" layoutY="270.0" prefHeight="209.0" prefWidth="474.0">
                            <children>
                               <Label alignment="CENTER" layoutX="152.0" layoutY="22.0" prefHeight="17.0" prefWidth="131.0" text="Asignar Cargo" />
@@ -72,8 +70,10 @@
                            </children>
                         </Pane>
                         <Button fx:id="btnCerrar" layoutX="808.0" layoutY="15.0" mnemonicParsing="false" onAction="#regresar" text="Regresar" />
-                        <Button fx:id="btnAgregarEmpleado" layoutX="409.0" layoutY="490.0" mnemonicParsing="false" onAction="#agregarEmpleado" prefHeight="25.0" prefWidth="67.0" text="Agregar" />
-                        <Button fx:id="btnEliminarEmpleado" layoutX="409.0" layoutY="490.0" mnemonicParsing="false" onAction="#eliminarEmpleado" prefHeight="26.0" prefWidth="67.0" text="Eliminar" />
+                        <Button fx:id="btnAgregarEmpleado" layoutX="378.0" layoutY="503.0" mnemonicParsing="false" onAction="#agregarEmpleado" prefHeight="25.0" prefWidth="67.0" text="Agregar" />
+                        <Button fx:id="btnEliminarEmpleado" layoutX="378.0" layoutY="503.0" mnemonicParsing="false" onAction="#eliminarEmpleado" prefHeight="26.0" prefWidth="67.0" text="Eliminar" />
+                        <TextField fx:id="txtModificarDireccion" layoutX="183.0" layoutY="466.0" prefHeight="25.0" prefWidth="225.0" />
+                        <Label fx:id="labelDireccion" layoutX="38.0" layoutY="466.0" prefHeight="26.0" prefWidth="144.0" text="Dirección:" />
                      </children>
                   </AnchorPane>
                </children>
