--- a/ProyectoBses/src/espol/edu/ec/gui/fxml/VentasPorCliente.fxml
+++ b/ProyectoBses/src/espol/edu/ec/gui/fxml/VentasPorCliente.fxml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
@@ -9,20 +12,20 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="espol.edu.ec.gui.controller.VentasPorClienteController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="espol.edu.ec.gui.controller.VentasPorClienteController">
    <children>
       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="536.0" prefWidth="834.0">
          <children>
             <TextField fx:id="txtInsumoCliente" layoutX="207.0" layoutY="33.0" />
             <Label alignment="CENTER" layoutX="35.0" layoutY="1.0" prefHeight="26.0" prefWidth="116.0" text="BUSQUEDA" />
-            <TableView fx:id="tableBusquedaInsumoCLiente" layoutX="-2.0" layoutY="81.0" prefHeight="175.0" prefWidth="834.0">
+            <TableView fx:id="tableBusquedaInsumoCLiente" layoutX="-2.0" layoutY="81.0" onMousePressed="#mostrarGastos" prefHeight="175.0" prefWidth="834.0">
                <columns>
-                  <TableColumn prefWidth="121.0" text="CEDULA" />
-                  <TableColumn prefWidth="95.0" text="NOMBRE" />
-                  <TableColumn prefWidth="112.0" text="APELLIDO" />
-                  <TableColumn prefWidth="129.0" text="CELULAR" />
-                  <TableColumn prefWidth="178.0" text="DIRECCION" />
-                  <TableColumn prefWidth="198.0" text="CORREO" />
+                  <TableColumn fx:id="CCedula" prefWidth="121.0" text="CEDULA" />
+                  <TableColumn fx:id="CNombre" prefWidth="95.0" text="NOMBRE" />
+                  <TableColumn fx:id="CApellido" prefWidth="112.0" text="APELLIDO" />
+                  <TableColumn fx:id="CCelular" prefWidth="129.0" text="CELULAR" />
+                  <TableColumn fx:id="CDireccion" prefWidth="178.0" text="DIRECCION" />
+                  <TableColumn fx:id="CCorreo" prefWidth="198.0" text="CORREO" />
                </columns>
             </TableView>
             <ChoiceBox fx:id="choBusuedaInsumoCliente" layoutX="18.0" layoutY="33.0" prefWidth="150.0" />
@@ -32,10 +35,10 @@
                   <Label alignment="CENTER" layoutX="319.0" layoutY="14.0" prefHeight="17.0" prefWidth="147.0" text="Detalles de gastos" />
                   <TableView fx:id="tableDetallesInsumosCliente" layoutY="34.0" prefHeight="166.0" prefWidth="834.0">
                      <columns>
-                        <TableColumn prefWidth="183.0" text="Insumo" />
-                        <TableColumn prefWidth="221.0" text="Cantidad" />
-                        <TableColumn prefWidth="218.0" text="Valor" />
-                        <TableColumn prefWidth="211.0" text="Total" />
+                        <TableColumn fx:id="CInsumo" prefWidth="183.0" text="Insumo" />
+                        <TableColumn fx:id="CCantidad" prefWidth="221.0" text="Cantidad" />
+                        <TableColumn fx:id="CValor" prefWidth="218.0" text="Valor" />
+                        <TableColumn fx:id="CTotal" prefWidth="211.0" text="Total" />
                      </columns>
                   </TableView>
                   <Label layoutX="528.0" layoutY="200.0" prefHeight="17.0" prefWidth="97.0" text="Valor final:" />
