--- a/ProyectoBses/src/espol/edu/ec/gui/fxml/VentanaRecepcionista.fxml
+++ b/ProyectoBses/src/espol/edu/ec/gui/fxml/VentanaRecepcionista.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.ComboBox?>
@@ -67,47 +66,51 @@
                         <TextField fx:id="txtApellidos" layoutX="189.0" layoutY="132.0" prefHeight="25.0" prefWidth="523.0" />
                         <TextField fx:id="txtNombre" layoutX="189.0" layoutY="85.0" prefHeight="25.0" prefWidth="523.0" />
                         <DatePicker fx:id="date" layoutX="187.0" layoutY="179.0" prefHeight="25.0" prefWidth="527.0">
-                           <cursor>
-                              <Cursor fx:constant="HAND" />
-                           </cursor></DatePicker>
+                           </DatePicker>
                         <TextField fx:id="txtCorreo" layoutX="189.0" layoutY="367.0" prefHeight="25.0" prefWidth="523.0" />
                         <TextField fx:id="txtDireccion" layoutX="189.0" layoutY="320.0" prefHeight="25.0" prefWidth="523.0" />
-                        <ComboBox fx:id="comboSexo" layoutX="189.0" layoutY="231.0" prefWidth="150.0" />
+                        <ComboBox fx:id="comboSexo" layoutX="67.0" layoutY="226.0" prefWidth="150.0" />
                         <Button fx:id="btnIngreso" layoutX="399.0" layoutY="410.0" mnemonicParsing="false" onAction="#nuevoCliente" text="Ingresar">
                            <font>
                               <Font name="System Bold" size="17.0" />
                            </font></Button>
-                        <Label layoutX="381.0" layoutY="220.0" prefHeight="47.0" prefWidth="177.0" text="Membresía:">
+                        <Label layoutX="239.0" layoutY="215.0" prefHeight="47.0" prefWidth="100.0" text="Membresía:">
                            <font>
                               <Font size="18.0" />
                            </font>
                         </Label>
-                        <ComboBox fx:id="comboMembresia" layoutX="564.0" layoutY="231.0" prefWidth="150.0" />
+                        <ComboBox fx:id="comboMembresia" layoutX="339.0" layoutY="226.0" prefWidth="150.0" />
+                        <Label layoutX="510.0" layoutY="215.0" prefHeight="47.0" prefWidth="52.0" text="Tipo:">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </Label>
+                        <ChoiceBox fx:id="choTipoMembresia" layoutX="562.0" layoutY="226.0" prefWidth="150.0" />
+                       
                      </children>
                   </AnchorPane>
             </content>
           </Tab>
-            <Tab fx:id="ventPagos" text="Pagos">
+            <Tab fx:id="ventPagos" text="Compras">
               <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <TextField fx:id="txtBusqueda" layoutX="185.0" layoutY="51.0" />
+                        <TextField fx:id="txtBusqueda" layoutX="220.0" layoutY="51.0" promptText="Buscar por cédula" />
                         <Label alignment="CENTER" layoutX="14.0" layoutY="14.0" prefHeight="26.0" prefWidth="116.0" text="BUSQUEDA" />
                         <TableView fx:id="tablePagos" layoutY="93.0" onKeyPressed="#seleccionPago" prefHeight="370.0" prefWidth="834.0">
                            <columns>
-                              <TableColumn prefWidth="121.0" text="CEDULA" />
-                              <TableColumn prefWidth="95.0" text="NOMBRE" />
-                              <TableColumn prefWidth="112.0" text="APELLIDO" />
-                              <TableColumn prefWidth="129.0" text="TELEFONO" />
-                              <TableColumn prefWidth="178.0" text="GASTO" />
-                              <TableColumn prefWidth="151.0" text="FACTURA" />
+                              <TableColumn fx:id="Colcedula" prefWidth="121.0" text="CEDULA" />
+                              <TableColumn fx:id="Colnombre" prefWidth="95.0" text="NOMBRE" />
+                              <TableColumn fx:id="Colapellido" prefWidth="112.0" text="APELLIDO" />
+                              <TableColumn fx:id="Coltelefono" prefWidth="129.0" text="TELEFONO" />
+                              <TableColumn fx:id="Colgasto" prefWidth="178.0" text="GASTO" />
                            </columns>
                         </TableView>
-                        <ChoiceBox fx:id="comboBusqueda" layoutX="14.0" layoutY="51.0" prefWidth="150.0" />
-                        <Button fx:id="btnBuscar" layoutX="360.0" layoutY="48.0" mnemonicParsing="false" onAction="#buscar" prefHeight="25.0" prefWidth="98.0" text="Buscar">
+                        <Button fx:id="btnBuscar" layoutX="394.0" layoutY="48.0" mnemonicParsing="false" onAction="#buscar" prefHeight="25.0" prefWidth="98.0" text="Buscar">
                            <font>
                               <Font size="15.0" />
                            </font></Button>
+                        <Button fx:id="mostrarcompras" layoutX="40.0" layoutY="51.0" mnemonicParsing="false" onAction="#mostrarCompras" text="Mostrar  todas las compras" />
                      </children>
                   </AnchorPane>
               </content>
@@ -126,7 +129,7 @@
                               <Font size="15.0" />
                            </font>
                         </Button>
-                        <TableView fx:id="tableNuevaMembresia" layoutX="-1.0" layoutY="92.0" onKeyPressed="#seleccionObjeto" prefHeight="200.0" prefWidth="787.0">
+                        <TableView fx:id="tableNuevaMembresia" layoutX="-1.0" layoutY="92.0" onKeyPressed="#seleccionObjeto" onMousePressed="#seleccion" prefHeight="200.0" prefWidth="787.0">
                           <columns>
                             <TableColumn fx:id="ClCedula" prefWidth="178.0" text="Cedula" />
                             <TableColumn fx:id="ClNombre" prefWidth="170.0" text="Nombre" />
@@ -134,10 +137,10 @@
                               <TableColumn fx:id="ClTelefono" prefWidth="212.0" text="Telefono" />
                           </columns>
                         </TableView>
-                        <Label fx:id="lblTipo" layoutX="23.0" layoutY="312.0" prefHeight="25.0" prefWidth="79.0" text="TIPO" />
+                        <Label layoutX="23.0" layoutY="312.0" prefHeight="25.0" prefWidth="79.0" text="TIPO" />
                         <ChoiceBox fx:id="choTipo" layoutX="184.0" layoutY="312.0" prefWidth="150.0" />
                         <ChoiceBox fx:id="choFormaPago" layoutX="184.0" layoutY="362.0" prefWidth="150.0" />
-                        <Label fx:id="lblPago" layoutX="23.0" layoutY="362.0" prefHeight="25.0" prefWidth="118.0" text="FORMA DE PAGO" />
+                        <Label layoutX="23.0" layoutY="362.0" prefHeight="25.0" prefWidth="118.0" text="FORMA DE PAGO" />
                      </children>
                   </AnchorPane>
                </content>
